--- a/app/views/payees/new.html.haml
+++ b/app/views/payees/new.html.haml
@@ -1,4 +1,4 @@
-%h1 Setup Payee
+%h1 Add Payee
 = form_for @payee do |f|
   = f.error_messages
   %table{:border => "0", :cellpadding => "0", :cellspacing => "10", :width => "80%"}
