--- a/app/views/layouts/login.html.haml
+++ b/app/views/layouts/login.html.haml
@@ -26,5 +26,5 @@
         .mcafee
           %img{:alt => "mcafee", :height => "48", :src => "/images/McAfee.png", :width => "132"}
       #footer
-        %span.footer_text ©2007-2010 Mini Software,Inc.! Build ph2344.27.3.5
+        %span.footer_text ©20011-2013 Money Momma.com! Build 0.1
     :javascript
