--- a/public/stylesheets/theme.css
+++ b/public/stylesheets/theme.css
@@ -1,8 +1,16 @@
 body {
   background-color: #c8e2d1;
-  font-family: Verdana, Helvetica, Arial;
-  font-size: 14px;
+  font-family: monospace, sans-serif;
+  font:13px/1.231 sans-serif;
+	 *font-size:small;
 }
+
+select, input, textarea, button { font:99% sans-serif; }
+
+/* normalize monospace sizing 
+ * en.wikipedia.org/wiki/MediaWiki_talk:Common.css/Archive_11#Teletype_style_fix_for_Chrome
+ */
+pre, code, kbd, samp { font-family: monospace, sans-serif; }
 
 a img {
   border: none;
