--- a/app/views/user_mailer/alert_before_paycheck.html.erb
+++ b/app/views/user_mailer/alert_before_paycheck.html.erb
@@ -27,7 +27,7 @@
 
   <tr>
   <td colspan="2" width="630" height="39" background="http://www.newtechfusion.com/demo/moneymomma/contant_02.jpg"
-  style="background-repeat:no-repeat;" ><span style="padding-left:120px; font-size:16px;">Your  Paycheck  amount  is $<%= "#{@depositss1[0].paycheck_amount.to_i} " %></span></td>
+  style="background-repeat:no-repeat;" ><span style="padding-left:120px; font-size:16px;">Your  Paycheck  amount  is $<%= "#{@depositamount} " %></span></td>
    </tr>
 
   <tr>
