--- a/app/views/user_mailer/alert_on_paycheck.html.erb
+++ b/app/views/user_mailer/alert_on_paycheck.html.erb
@@ -12,26 +12,26 @@
 <!--start inner table-->
 <table width="630" border="0" cellspacing="0" cellpadding="0" align="center" style="font-family:Arial, Helvetica, sans-serif; font-size:12px; font-weight:bold; color:#030;">
   <tr>
-    <td colspan="2" width="630" height="36" background="http://mymoneymomma.heroku.com/images/newimages/top.jpg" style="background-repeat:no-repeat;">
+    <td colspan="2" width="630" height="36" background="<%=  ADDRESS_FOR_IMAGES %>/top.jpg" style="background-repeat:no-repeat;">
     <p style="font-size:9px; padding-left:260px; margin-bottom:16px;"><a href="http://www.mymoneymomma.com" target="_blank" style="text-decoration:none; color:#030;">MMM Safe &amp; Secure</a></p></td>
   </tr>
   <tr>
-    <td width="220" height="48" background="http://mymoneymomma.heroku.com/images/newimages/logo.jpg" style="padding-left:15px;"><a href="http://www.mymoneymomma.com" target="_blank"><img src="http://mymoneymomma.heroku.com/images/newimages/logo.png" border="0" /></a></td>
-    <td width="395" height="40" background="http://mymoneymomma.heroku.com/images/newimages/see_overview.jpg">
+    <td width="220" height="48" background="<%=  ADDRESS_FOR_IMAGES %>/logo.jpg" style="padding-left:15px;"><a href="http://www.mymoneymomma.com" target="_blank"><img src="<%=  ADDRESS_FOR_IMAGES %>/logo.png" border="0" /></a></td>
+    <td width="395" height="40" background="<%=  ADDRESS_FOR_IMAGES %>/see_overview.jpg">
     <p style="padding-left:100px; margin-bottom:22px; font-size:11px;"><a href="http://www.mymoneymomma.com" target="_blank" style="text-decoration:none; color:#030;">See My OverView</a> &nbsp;|&nbsp; <a href="#" target="_blank" style="text-decoration:none; color:#030;">Find Saving</a></p></td>
   </tr>
 
   <tr>
-  <td width="630" height="37" colspan="2" background="http://mymoneymomma.heroku.com/images/newimages/contant_01.jpg"></td>
+  <td width="630" height="37" colspan="2" background="<%=  ADDRESS_FOR_IMAGES %>/contant_01.jpg"></td>
   </tr>
 
   <tr>
-  <td colspan="2" width="630" height="39" background="http://mymoneymomma.heroku.com/images/newimages/contant_02.jpg"
+  <td colspan="2" width="630" height="39" background="<%=  ADDRESS_FOR_IMAGES %>/contant_02.jpg"
   style="background-repeat:no-repeat;" ><span style="padding-left:120px; font-size:16px;">Today is your Payment day</span></td>
    </tr>
 
   <tr>
-  <td colspan="2" width="630" height="52" background="http://mymoneymomma.heroku.com/images/newimages/contant_03.jpg">
+  <td colspan="2" width="630" height="52" background="<%=  ADDRESS_FOR_IMAGES %>/contant_03.jpg">
   	<table width="420" border="0" cellspacing="0" cellpadding="0" align="center" style="line-height:20px;">
   <tr align="center">
     <td align="left">NAME OF BILL</td>
@@ -50,26 +50,26 @@
   </tr>
 
     <tr>
-  <td colspan="2" width="630" height="21" background="http://mymoneymomma.heroku.com/images/newimages/contant_04.jpg"></td>
+  <td colspan="2" width="630" height="21" background="<%=  ADDRESS_FOR_IMAGES %>/contant_04.jpg"></td>
   </tr>
 
    <tr>
-  <td colspan="2" width="630" height="82" background="http://mymoneymomma.heroku.com/images/newimages/contant_05.jpg">
+  <td colspan="2" width="630" height="82" background="<%=  ADDRESS_FOR_IMAGES %>/contant_05.jpg">
   <p style="padding-left:110px; padding-right:110px;">Today is your Payment day, Please login mymoneymomma to manage things.</p></td>
   </tr>
 
  <tr>
-  <td colspan="2" background="http://mymoneymomma.heroku.com/images/newimages/contant_060.jpg" width="630" height="21" style="background-repeat:no-repeat;"><span style="padding-left:110px;">
-  <a href="http://www.mymoneymomma.com" target="_blank"><img height="18" src="http://mymoneymomma.heroku.com/images/newimages/login.jpg" border="0" /></a></span></td>
+  <td colspan="2" background="<%=  ADDRESS_FOR_IMAGES %>/contant_060.jpg" width="630" height="21" style="background-repeat:no-repeat;"><span style="padding-left:110px;">
+  <a href="http://www.mymoneymomma.com" target="_blank"><img height="18" src="<%=  ADDRESS_FOR_IMAGES %>/login.jpg" border="0" /></a></span></td>
   </tr>
 
    <tr>
-  <td colspan="2" width="630" height="61" background="http://mymoneymomma.heroku.com/images/newimages/contant_070.jpg" style="background-repeat:no-repeat;"><p style="padding-left:120px; padding-right:50px;  color:#FFF;">P.S. Want to achieve your goals faster? Use our NEW goals feature to set goals, track your progress and get customized advice.</p></td>
+  <td colspan="2" width="630" height="61" background="<%=  ADDRESS_FOR_IMAGES %>/contant_070.jpg" style="background-repeat:no-repeat;"><p style="padding-left:120px; padding-right:50px;  color:#FFF;">P.S. Want to achieve your goals faster? Use our NEW goals feature to set goals, track your progress and get customized advice.</p></td>
   </tr>
 
 
    <tr>
-  <td colspan="2" width="630" height="47" background="http://mymoneymomma.heroku.com/images/newimages/contant_08.jpg" style="background-repeat:no-repeat;"><span style="padding-left:130px;">P.S. Want to achieve your goals faster? Use our NEW goals feature to set goals,<br /><span style="padding-left:130px;">track your progress and get customized advice.</span></span>
+  <td colspan="2" width="630" height="47" background="<%=  ADDRESS_FOR_IMAGES %>/contant_08.jpg" style="background-repeat:no-repeat;"><span style="padding-left:130px;">P.S. Want to achieve your goals faster? Use our NEW goals feature to set goals,<br /><span style="padding-left:130px;">track your progress and get customized advice.</span></span>
 
   </td>
    </tr>
@@ -78,10 +78,10 @@
   <td colspan="2">
   	<table cellpadding="0" cellspacing="0">
     <tr>
-    <td width="372" height="146" background="http://mymoneymomma.heroku.com/images/newimages/footer_01.jpg" style="background-repeat:no-repeat;">
+    <td width="372" height="146" background="<%=  ADDRESS_FOR_IMAGES %>/footer_01.jpg" style="background-repeat:no-repeat;">
 
     <table border="0" cellpadding="0" cellspacing="0" width="220px;" align="right" style="margin-bottom:40px;">
-    <tr valign="top"><td rowspan="2" width="70"><img src="http://mymoneymomma.heroku.com/images/newimages/mob.png" / style="padding-left:8px;"></td>
+    <tr valign="top"><td rowspan="2" width="70"><img src="<%=  ADDRESS_FOR_IMAGES %>/mob.png" / style="padding-left:8px;"></td>
     </tr>
 
     <tr valign="top"><td width="170" style="line-height:22px;"><span style="text-decoration:underline;">Get Money Momma for</span><br />
@@ -93,14 +93,14 @@
     	</td>
 
 
-    <td width="258" height="146" background="http://mymoneymomma.heroku.com/images/newimages/footer_02.jpg" style="background-repeat:no-repeat;">
+    <td width="258" height="146" background="<%=  ADDRESS_FOR_IMAGES %>/footer_02.jpg" style="background-repeat:no-repeat;">
     <table width="220" cellpadding="0" cellspacing="0" style="margin-bottom:50px;">
     <tr>
     <td align="center" width="100px;" style="padding-left:10px;">Folllow us on:</td>
     <td>
-    <a href="http://www.mymoneymomma.com" target="_blank"><img src="http://mymoneymomma.heroku.com/images/newimages/fb.jpg" alt="facebook" border="0"/></a>
-    <a href="http://www.mymoneymomma.com" target="_blank"><img src="http://mymoneymomma.heroku.com/images/newimages/twt.png" alt="twitter" border="0" style="padding-left:8px;" /></a>
-    <a href="http://www.mymoneymomma.com" target="_blank"><img src="http://mymoneymomma.heroku.com/images/newimages/rss.png" alt="rss" border="0" style="padding-left:8px;" /></a></td>
+    <a href="http://www.mymoneymomma.com" target="_blank"><img src="<%=  ADDRESS_FOR_IMAGES %>/fb.jpg" alt="facebook" border="0"/></a>
+    <a href="http://www.mymoneymomma.com" target="_blank"><img src="<%=  ADDRESS_FOR_IMAGES %>/twt.png" alt="twitter" border="0" style="padding-left:8px;" /></a>
+    <a href="http://www.mymoneymomma.com" target="_blank"><img src="<%=  ADDRESS_FOR_IMAGES %>/rss.png" alt="rss" border="0" style="padding-left:8px;" /></a></td>
     </tr></table>
 
     </td>
