--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,13 @@
     <%= stylesheet_link_tag "theme", "notice" %>
     <%= javascript_include_tag :defaults %>
     <%= javascript_include_tag "swfobject" %>
+
+    <%= javascript_include_tag "jquery-1.5.2.min" %>
+    <%= javascript_include_tag "jquery-ui.min" %>
+    <%= javascript_include_tag "jquery.min" %>
+     <%= javascript_include_tag "jquery" %>
+
+
     <%= csrf_meta_tag %>
     <%= yield(:head) %>
 
