--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -10,88 +10,115 @@
           <div class="left_image"></div>
           <!--leftcontaint_start-->
           <div id="left_containt">
-            <div class="left_bg">
-              <div class="account"><img src="images/imagehome/account_bullet.png" />
+ <!-- start left_bg-->
+<div class="left_bg">
+            <table width="270" border="0" cellspacing="0" cellpadding="0" align="center">
+  <tr class="top_heading">
+    <td height="36" width="30"><span class="heading_obj"><img src="images/imagehome/account_bullet.png" alt="" title="" /></span></td>
+    <td>Account</td>
+    <td align="right"></td>
+    <td width="60"></td>
+  </tr>
+  <tr>
+    <td colspan="4"><table cellpadding="0" cellspacing="0" width="245" height="35" align="left">
+    	<tr><td width="8"></td><td class="heading_bg space" width="52"><img src="images/imagehome/bullete.jpg" />&nbsp;<img src="images/imagehome/cash.jpg" /></td>
+        <td class="heading_bg"><b>My financial deposits</b></td></tr>
+        </table></td>
+    </tr>
 
-                <div class="account_link"><a href="#">Account</a> <a href="#"></a></div>
-
-                <div class="link_aaccount"><a href="#">update</a>|<a href="#">Edite</a></div>
-
-
-
-                <div class="account_subheading"><img src="images/imagehome/bullete.jpg" /><img src="images/imagehome/cash.jpg" />
-                  <p>My financial deposits</p></div>
-
-                <!--suncocost_start-->
-             <%- @deposits.each do |d| %>
-                <div class="containt">
-                  <div class="containt_suncost">Paycheck Amount</div>
-                  <div class="containt_suncost_price"><%= "$#{d.paycheck_amount}" %></div>
-                </div>
-
-               
-
-                <div class="containt">
-                  <div class="containt_suncost">Paycheck Frequency</div>
-                  <div class="containt_suncost_price"><%= "#{d.paycheck_frequency}" %></div>
-                </div>
-
-                <div class="time">
-                        <div class="time_second"><%=  link_to "Edit", edit_deposit_path(d) %></div>
-                        <div class="time_link"><%=  link_to_remote "Destroy", :url=>deposit_path(d), :method=>"delete", :confirm=>"Are you sure ?" %></div>
-                 </div>
-              
-                <%- end%>
-                <!--suncocost_start-->
-
-                <div class="account_subheading"><img src="images/imagehome/bullete.jpg" /><img src="images/imagehome/credite.jpg" />
-                  <p>Recurring payments	</p></div>
-
-                <!--suncocost_start-->
-
-              <% @payments.each do |p| %>
-
-                <div class="containt">
-                  <div class="containt_suncost">Payee</div>
-                  <div class="containt_suncost_price"><%= "#{Payee.find(p.payee_id).name}" %></div>
-                </div>
-
-              
-
-                <div class="containt">
-                  <<div class="containt_suncost">Amount</div>
-                  <div class="containt_suncost_price"><%= "$#{p.amount}" %></div>
-                </div>
-
-              
+<%- @deposits.each do |d| %>
+    <tr>
+    <td colspan="4"><table cellpadding="0" cellspacing="0" width="245" height="35" align="left" class="text_content">
+    	<tr><td width="8" height="30"></td>
+        <td><b class="space">Paycheck Amount</b></td>
+        <td align="right" class="right_space"><%= "$#{d.paycheck_amount}" %></td></tr>
+         </table></td>
+    </tr>
 
 
-                <div class="containt">
-                  <div class="containt_suncost">Delivery Time</div>
-                  <div class="containt_suncost_price"><%= "#{p.delivery_time}" %></div>
-                </div>
-
-             
-
-                <div class="containt">
-                  <div class="containt_suncost">No. of Payments</div>
-                  <div class="containt_suncost_price"><%= "#{p.number_of_payments}" %></div>
-                </div>
-
-                <div class="time">
-                  <div class="time_second"><%=  link_to "Edit", edit_payment_path(p) %></div>
-                  <div class="time_link"><%= link_to_remote "Destroy", :url=>payment_path(p), :method=>"delete", :confirm=>"Are you sure ?"   %></div>
-                </div>
-  
-        <%- end%>
-
-               <!--suncocost_start-->
-                <div class="account_subheading"><img src="images/imagehome/bullete.jpg" /><img src="images/imagehome/Loan.jpg" />
-                  <p>Loan </p><p></p><p>$2,098.2</p></div>
 
 
-              </div>
-            </div>
+     <tr>
+    <td colspan="4"><table cellpadding="0" cellspacing="0" width="245" height="35" align="left" class="text_content">
+    	<tr><td width="8" height="30"></td>
+        <td width="122"><b class="space">Paycheck Frequency</b></td>
+        <td align="right" class="right_space"><%= "#{d.paycheck_frequency}" %></td></tr>
+         </table></td>
+    </tr>
+
+       <!--seprate-->
+    <tr>
+    <td colspan="4"><table cellpadding="0" cellspacing="0" width="245" height="10" align="left" class="edit_destroy">
+    	<tr><td></td></tr>
+         </table></td>
+    </tr>
+    <!--seprate-->
+
+    <tr>
+    <td colspan="4"><table cellpadding="0" cellspacing="0" width="245" height="25" align="left" class="edit_destroy">
+    	<tr><td width="8"></td>
+        <td width="190" align="right" class="border_tp border_bt"><span class="edit_link"><%=  link_to "Edit", edit_deposit_path(d) %></span> &nbsp; | </td>
+        <td align="left"  class="border_tp border_bt">&nbsp;&nbsp;<span class="destroy_link"><%=  link_to_remote "Destroy", :url=>deposit_path(d), :method=>"delete", :confirm=>"Are you sure ?" %></span></td></tr>
+         </table></td>
+    </tr>
+
+<%- end%>
+
+
+    <tr>
+    <td colspan="4"><table cellpadding="0" cellspacing="0" width="245" height="35" align="left">
+    	<tr><td width="8"></td><td class="heading_bg space" width="55"><img src="images/imagehome/bullete.jpg" />&nbsp;<img src="images/imagehome/credite.jpg" /></td>
+        <td class="heading_bg"><b>Recurring payments</b></td></tr>
+        </table></td>
+    </tr>
+
+   <% @payments.each do |p| %>
+    <tr>
+    <td colspan="4"><table cellpadding="0" cellspacing="0" width="245" height="35" align="left" class="text_content">
+    	<tr><td width="8" height="30"></td>
+        <td><b class="space">Payee</b></td>
+        <td align="right" class="right_space"><%= "#{Payee.find(p.payee_id).name}" %></td></tr>
+         </table></td>
+    </tr>
+
+    <tr>
+    <td colspan="4"><table cellpadding="0" cellspacing="0" width="245" height="35" align="left" class="text_content">
+    	<tr><td width="8" height="30"></td>
+        <td><b class="space">Amount</td>
+        <td align="right" class="right_space"><%= "$#{p.amount}" %></td></tr>
+         </table></td>
+    </tr>
+
+       <tr>
+    <td colspan="4"><table cellpadding="0" cellspacing="0" width="245" height="35" align="left" class="text_content">
+    	<tr><td width="8" height="30"></td>
+        <td><b class="space">Delivery Time</td>
+        <td align="right" class="right_space"><%= "#{p.delivery_time}" %></td></tr>
+         </table></td>
+    </tr>
+
+       <tr>
+    <td colspan="4"><table cellpadding="0" cellspacing="0" width="245" height="35" align="left" class="text_content">
+    	<tr><td width="8" height="30"></td>
+        <td class="border"><b class="space">No. of Payments</td>
+        <td align="right" class="border right_space"><%= "#{p.number_of_payments}" %></td></tr>
+         </table></td>
+    </tr>
+
+    <tr>
+    <td colspan="4"><table cellpadding="0" cellspacing="0" width="245" height="25" align="left" class="edit_destroy">
+    	<tr><td width="8"></td>
+        <td width="190" align="right"  class="border_tp border_bt"><span class="edit_link"><%=  link_to "Edit", edit_payment_path(p) %></span> &nbsp; | </td>
+        <td align="left"  class="border_tp border_bt">&nbsp;&nbsp;<span class="destroy_link"><%= link_to_remote "Destroy", :url=>payment_path(p), :method=>"delete", :confirm=>"Are you sure ?"   %></span></td></tr>
+         </table></td>
+    </tr>
+ <%- end%>
+</table>
+</div>
+ <!-- close left_bg-->
+
+            
+
           </div>
           <!--leftcontaint_End-->
         </div>
