--- a/public/stylesheets/stylehome.css
+++ b/public/stylesheets/stylehome.css
@@ -13,6 +13,12 @@ p {
 	color: #006b38;
 	font-weight:bold;
 }
+ul{
+	margin:0;
+	padding:0;
+	list-style-type:none;
+}
+
 #header_part {
 	width: 100%;
 	height: 176px;
@@ -96,7 +102,7 @@ p {
 	background-repeat: no-repeat;
 	float: right;
 	height: 25px;
-	width: 165px;
+	width: 180px;
 	font-size: 8px;
 	margin-top: 0px;
 	padding-top: 0px;
@@ -104,33 +110,68 @@ p {
 .header_top_link a {
 	color: #FFF;
 	text-decoration: none;
-	line-height: 22px;
+	line-height: 20px;
 	padding:0 0 0 0;
 	margin:0 0 0 0;
-	text-shadow:#000 1px 1px 5px;
+	font-size:10px;
+	font-weight:bold;
+	font-family: Arial, Helvetica, sans-serif;
+	/*text-shadow:#000 1px 1px 5px;*/
 }
 .header_top_link a img {
-	margin:5px 5px 0 5px;
+	margin:5px 5px 0 0px;
 	float: left;
-	padding:0 0 0 10px;
+	padding:0 0 0 8px;
+}
+#logo_base {
+	clear: both;
+	margin: 0px;
+	padding: 0px;
 }
 .logo_part {
-	clear: both;
-	margin-top: 0px;
-	padding-top: 15px;
 	float: left;
 	width: 353px;
+	margin: 0px;
+	padding-top: 15px;
+}
+
+#login {
+	float: right;
+	padding-top: 20px;
+        margin: 30px 0 0 0;
+	color: #FF9C0A;
+	font-weight: bold;
+        font-size:12px;
+}
+#login li a:hover {
+	color: #FFF;
+	text-decoration: underline;
+}
+#login ul {
+	margin: 0px;
+}
+#login li {
+	display: inline;
+	float: left;
+}
+#login li a {
+	text-decoration: none;
+	color: #EC8D00;
+}
+.line-spacing {
+	padding-right: 10px;
+	padding-left: 10px;
 }
 .header_nav {
 	float: right;
 	height: 40px;
 	width: 611px;
-	margin-top: 60px;
+	margin-top: 31px;
 }
 .header_nav_c_corner a {
 	color: #5c3700;
 	text-decoration: none;
-	font-size: 13px;
+	font-size: 12px;
 	font-weight: bold;
 	display: block;
 	float: left;
@@ -150,8 +191,9 @@ p {
 }
 
 .header_nav_c_corner a:hover {
-	color: #462B00;
-	background-color: #FFCD96;
+	color: #FFF;
+	background-image: url(/images/imagehome/hover.gif);
+	background-repeat: repeat-x;
 }
 
 .header_nav_l_corner {
@@ -206,10 +248,85 @@ p {
 	float: left;
 	margin:0 0 0 20px;
 }
+
+
+/*---------------start user account---------------*/
 .left_bg {
-	background-image: url(/images/imagehome/left_bg.jpg); background-repeat: no-repeat; background-position: top;
+	background-image: url(/images/imagehome/left_bg.jpg);
+	background-repeat: no-repeat;
+	background-position: top;
+	width: 280px;
+	height: 462px;
+	float: left;
+	padding-top: 48px;
+	color: #006b38;
+}
+.edit_link a {
+	color: #006b38;
+	text-decoration: none;
+}
+.edit_link a:hover {
+	text-decoration: underline;
+}
+
+.destroy_link a {
+	color: #006B37;
+	text-decoration: none;
+}
+.destroy_link a:hover {
+	text-decoration: underline;
+}
+
+.heading_bg {
+	background-color: #c8e2d1;
+}
+.heading_obj {
+}
+.heading_obj img {
+	padding-left: 20px;
+}
+.space {
+	padding-left: 8px;
+}
+.text_content {
+	font-size: 11px;
+	font-weight: bold;
+}
+.edit_destroy {
+	font-size: 10px;
+}
+.top_heading {
+	color: #FFF;
+	font-size: 13px;
+}
+.border_tp {
+	border-top-width: 1px;
+	border-top-style: solid;
+	border-top-color: #006634;
+}
+.right_space {
+	padding-right: 4px;
+}
+
+
+.border_bt {
+	border-bottom-width: 1px;
+	border-bottom-style: solid;
+	border-bottom-color: #006634;
+}
+
+/*---------------close user account---------------*/
+
+
+
+/*
+
+.left_bg {
+	background-image: url(/images/imagehome/left_bg.jpg); 
+        background-repeat: no-repeat;
+        background-position: top;
 	width: 281px;
-	height: 461px;
+	height: 462px;
 	float: left;
 }
 .account {
@@ -238,12 +355,24 @@ p {
 	background-color: #c8e2d1;
 	height: 35px;
 	width: 236px;
-	clear: both;
 	margin-top: 5px;
-	margin-right: 0;
+	margin-right: 0px;
 	margin-bottom: 0;
-	margin-left: -10px;
 	padding-top: 0px;
+	clear: both;
+	margin-left: -10px;
+}
+
+.subheading_btm{
+	background-color: #c8e2d1;
+	height: 5px;
+	width: 236px;
+	margin-top: 10px;
+	margin-right: 0px;
+	margin-bottom: 0;
+	padding-top: 0px;
+	clear: both;
+	margin-left: -10px;
 }
 .link_aaccount {
 	float: right;
@@ -266,7 +395,7 @@ p {
 	color: #006b38;
 	font-weight: bold;
 	display: block;
-	/*width: 90px;*/
+	width: 90px;
 	float: left;
 	text-align: center;
 	line-height: 35px;
@@ -318,7 +447,7 @@ p {
 .time_link a {
 	color: #006b38;
 	text-decoration: none;
-}
+}*/
 #right_part {
 	float: left;
 	width: 660px;
@@ -330,12 +459,16 @@ p {
 	width: 660px;
 	padding-top: 10px;
 }
+.right_top_containt  {
+	*padding-top: -10px !important;
+}
 .right_bg_top {
 	background-image: url(/images/imagehome/top-shadow.jpg);
 	background-repeat: no-repeat;
 	background-position: left;
 	width: 660px;
 	height: 26px;
+        margin-top: 10px;
 }
 .right_bg_left {
 	background-image: url(/images/imagehome/left-shadow.jpg); background-repeat: no-repeat; background-position: left;
