--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -95,9 +95,9 @@
 <div class="footer_part">
 	<div class="footer_containor">
 		<div class="footer_link">
-        <a href="#">WHAT IS MINT?</a> <a href="#">HOW IT WORKS</a> <a href="#">FIND SAVINGS</a> <a href="#">COMMUNITY</a> <a href="#" style="border-right-style:none;">COMPANY</a>
+        <a href="#">What is MM?</a> <a href="#">HOW IT WORKS</a> <a href="#">FIND SAVINGS</a> <a href="#">COMMUNITY</a> <a href="#" style="border-right-style:none;">COMPANY</a>
         </div>
-      <div class="copyright">Copyright © Money momma  2011 All Rights Reserved | new tech fusion</div>
+      <div class="copyright">Copyright © Money momma  2011 All Rights Reserved</div>
     </div>
 </div>
     <!--Footer Part Start-->
