--- a/app/views/layouts/login.html.haml
+++ b/app/views/layouts/login.html.haml
@@ -15,16 +15,10 @@
           =link_to "Sign Up", new_user_path
       #header
         .logo
-          %img{:alt => "logo", :height => "58", :src => "/images/logo.png", :width => "210"}
+          %img{:alt => "logo", :height => "58", :src => "/images/imagehome/logo_.png", :width => "210"}
       =yield
       #menu
-      #add
-        .ver
-          %img{:alt => "ver", :height => "84", :src => "/images/ver.png", :width => "131"}
-        .trust
-          %img{:alt => "trust", :height => "58", :src => "/images/trust.png", :width => "171"}
-        .mcafee
-          %img{:alt => "mcafee", :height => "48", :src => "/images/McAfee.png", :width => "132"}
+      
       #footer
         %span.footer_text ©20011-2013 Money Momma.com! Build 0.1
     :javascript
