--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,7 +63,7 @@
                          <%= link_to "Payees", payees_path %>
                          <%= link_to "Recuring Payments", new_payment_path ,:style => "padding-top:5px; height:35px;" %>
                          <%= link_to "My Financial Info", new_deposit_path ,:style=>"padding-top: 6px; height: 34px; width:90px;"%>
-                         <%= link_to "Payment Activity", transactions_path ,:style=>"padding-top:5px; height:35px; width:92px;"%>
+                         <%= link_to "Money Momma Coupons", transactions_path ,:style=>"padding-top:5px; height:35px; width:92px;"%>
                          <%= link_to "Email & Alerts", email_alert_users_path , :style => "border-right-style:none;" %>
 
 
