--- a/app/views/transactions/index.html.haml
+++ b/app/views/transactions/index.html.haml
@@ -1,16 +1,8 @@
-%table{:id=> "overview", :width=>"100%"}
-  %tr
-    %th Send Date
-    %th Payee
-    %th Reference Number
-    %th Amount
-    %th Status
-  - @trans.each do |t|
-    %tr
-      %td= t.created_at.strftime("%d %b, %Y")
-      %td= Payment.find_by_id(t.payable_id).payee.name
-      %td= t.reference_number
-      %td
-        $
-        = t.amount
-      %td= t.status
+<script language="javascript" type="text/javascript">
+var ci_cap_scriptId = "7333";
+var ci_cap_bid = "1198530001";
+var ci_cap_format = "718x940";
+var ci_cap_bannerType = "3";
+var ci_cap_channel = "Money Momma";
+</script>
+<script language="javascript" type="text/javascript" src="http://bc.coupons.com/"></script>
